--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
 <head>
-    <title>Comparte tus viajes</title>
+    <title>Porche 911</title>
 </head>
 <body>
-    <header>
-        <h1>Nerw York-Central Park</h1>
+   <header> Comparte tus viajes</header>
+      <h1>Nerw York-Central Park</h1>
         <nav>
             <ul>
                 <li><a href="#">Descripción</a></li>
