--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <title>Porche 911</title>
 </head>
 <body>
-   <header> Comparte tus viajes</header>
-      <h1>Nerw York-Central Park</h1>
+   <h1> Comparte tus viajes</h1>
+      <h2>Nerw York-Central Park</h2>
         <nav>
             <ul>
                 <li><a href="#">Descripción</a></li>
