Creación de imagenes

--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@
 </head>
 <body>
    <h1> Comparte tus viajes</h1>
-      <h2>Nerw York-Central Park</h2>
+      <h2>New York-Central Park</h2>
         <nav>
             <ul>
-                <li><a href="#">Descripción</a></li>
+                <li><a href="#descripcion">Descripción</a></li>
                 <li><a href="#">Fotos Relacionadas</a></li>
                 <li><a href="#">Comentarios</a></li>
             </ul>
         </nav>
-    </header>
+    
+    <h3 id="#descripcion">Descripcion</h3>
+    <p>Foto de Randy Connolly</p>
+    <p>Esta foto del Estanque del Conservatorio en Central Park en Ciudad de Nueva York fue tomada en Octubre 22, 2021 con una cámara Canon EOS 301</p>
 
-    <!-- El contenido de tu página iría aquí -->
-
+    <img src="images/img1.jpg" alt="Estanque del Conservatorio en Central Park" width="150" height="150">
 </body>
 </html>
