Modificación del tamaño de la imagen

--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
     <p>Esta foto del Estanque del Conservatorio en Central Park en Ciudad de Nueva York fue tomada en Octubre 22, 2021 con una cámara Canon EOS 301</p>
 
 
-  <img src="images/img1.jpg" alt="Estanque del Conservatorio en Central Park" width="150" height="150">
+    <style>
+        img {
+        position: absolute;
+         left: 50px;
+        }
+    </style>
+    <img src="images\img1.jpg" alt="Descripción de la imagen" width="900" height="600">
 </body>
 </html>
