--- a/index.html
+++ b/index.html
@@ -26,5 +26,20 @@
         }
     </style>
     <img src="images\img1.jpg" alt="Descripción de la imagen" width="900" height="600">
+    <h4>Compartir: 
+<a href="https://www.facebook.com/" target="_blank" class="social-button">
+        <img src="logos/faceb.png" alt="Facebook">
+    </a>
+<a href=https://www.youtube.com/" target="_red" class="social-button">
+    <img src="logos/yt.png" alt="youtube">
+
+<a href="https://twitter.com/" target="_blue" class="social-button">
+        <img src="logos/x.png" alt="Twitter">
+    </a>
+<a href="https://www.instagram.com/tu_perfil_de_instagram" target="_blank" class="social-button">
+        <img src="logos/insta.png" alt="Instagram">
+    </a>
+</h4>
+
 </body>
 </html>
