Ajuste imagesindex.html
Se ajustaron las imágenes y se arreglaron problemas

--- a/index.html
+++ b/index.html
@@ -19,27 +19,23 @@
     <p>Esta foto del Estanque del Conservatorio en Central Park en Ciudad de Nueva York fue tomada en Octubre 22, 2021 con una cámara Canon EOS 301</p>
 
 
-    <style>
-        img {
-        position: absolute;
-         left: 50px;
-        }
-    </style>
     <img src="images\img1.jpg" alt="Descripción de la imagen" width="900" height="600">
+
     <h4>Compartir: 
 <a href="https://www.facebook.com/" target="_blank" class="social-button">
-        <img src="logos/faceb.png" alt="Facebook">
+        <img src="logos/faceb.png" alt="Facebook" width="30" height="35" >
     </a>
-<a href=https://www.youtube.com/" target="_red" class="social-button">
-    <img src="logos/yt.png" alt="youtube">
+<a href="https://www.youtube.com/ " target="_red" class="social-button">
+    <img src="logos/yt.png" alt="youtube" width="45" height="40">
 
 <a href="https://twitter.com/" target="_blue" class="social-button">
-        <img src="logos/x.png" alt="Twitter">
+        <img src="logos/x.png" alt="Twitter" width="40" height="35">
     </a>
-<a href="https://www.instagram.com/tu_perfil_de_instagram" target="_blank" class="social-button">
-        <img src="logos/insta.png" alt="Instagram">
+<a href="https://www.instagram.com/"  target="_blank" class="social-button">
+        <img src="logos/insta.png" alt="Instagram" width="40" height="35">
     </a>
 </h4>
+
 
 </body>
 </html>
