--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <title>Porche 911</title>
+    <link rel="stylesheet" href="css/estilos.css" />
 </head>
 <body>
    <h1> Comparte tus autos </h1>
